@@ -520,18 +520,18 @@ cl_hc08::exec_inst(void)
                 default: return(resHALT);
               }
             case 0xa:
-              switch (code & 0x5) {
-                case 0xe: return(inst_ldhx(code,true));
+              switch (code) {
+                case 0xae: return(inst_ldhx(code,true));
                 default: return(resHALT);
               }
             case 0xb:
-              switch (code & 0x5) {
-                case 0xe: return(inst_ldhx(code,true));
+              switch (code) {
+                case 0xbe: return(inst_ldhx(code,true));
                 default: return(resHALT);
               }
             case 0xc:
-              switch (code & 0x5) {
-                case 0xe: return(inst_ldhx(code,true));
+              switch (code) {
+                case 0xce: return(inst_ldhx(code,true));
                 default: return(resHALT);
               }
             case 0xd:
